[package]
name = "beml-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beml"
path = "src/main.rs"

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
bupropion = "0.0.20"
beml-analysis = { path = "../beml-analysis" }
beml-syntax = { path = "../beml-syntax" }
beml-tree = { path = "../beml-tree" }
clap = { version = "4.5.18", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.64"
